--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # animalsound
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/Shenggang/animalsound/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/Shenggang/animalsound/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 Animalsound is an example package developped during the R package Workshop June 2025 in Warwick.
